# ONBOARDING

./: README.md  pyproject.toml
src/upsell_navigator___deploy_ready/: crew.py  main.py
src/upsell_navigator___deploy_ready/config/: agents.yaml  tasks.yaml
src/upsell_navigator___deploy_ready/tools/: report_data_formatter.py
